--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@ Theme Name: TUHH Institute
 Theme URI: http://underscores.me/
 Author: TuTech Innovation GmbH
 Author URI: http://tutech.de
-Description: Description
-Version: 1.0-wpcom
+Description: Theme für Institute der Technischen Universität Hamburg Harburg 
+Version: 0.1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: tuhh-institute
-Tags: tuhh
+Tags: tuhh, technische universität, universität, hamburg, harburg
 
 This theme, like WordPress, is licensed under the GPL.
 
